about overlapping fixed for mobile devices, read blog button direction updated

--- a/css/style.css
+++ b/css/style.css
@@ -563,7 +563,7 @@ footer {
 /* about-us section */
 .about-page-section {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -593,6 +593,7 @@ footer {
 @media (max-width: 600px) {
   .about-page-section {
     padding-top: 60px;
+    height: auto;
   }
   .about-section {
     padding-left: 10px;
